# my_ldd

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: autotests.yml
example/: CMakeLists.txt
example/exclamation/: CMakeLists.txt  exclamation.c
example/hello/: CMakeLists.txt  hello.c
example/world/: CMakeLists.txt  world.c
src/: dependencies.cpp  dependencies.h  main.cpp  symbols.h  util.cpp  util.h
tests/: .gitignore  generator.py  run.sh
tests/generated_0/: CMakeLists.txt  exe_0.ans  exe_0.c  lib_0.c  lib_1.c  lib_2.c  lib_3.c
tests/generated_1/: CMakeLists.txt  exe_0.ans  exe_0.c  exe_1.ans  exe_1.c  lib_0.c  lib_1.c  lib_2.c  lib_3.c
tests/generated_10/: CMakeLists.txt  exe_0.ans  exe_0.c  lib_0.c  lib_2.c
tests/generated_11/: CMakeLists.txt  exe_0.ans  exe_0.c  exe_1.ans  exe_1.c  lib_0.c
tests/generated_12/: CMakeLists.txt  exe_0.c  exe_1.c  lib_0.c  lib_1.c  lib_2.c
tests/generated_13/: CMakeLists.txt  exe_0.ans  exe_0.c  exe_1.ans  exe_1.c  lib_0.c  lib_1.c  lib_2.c
tests/generated_14/: CMakeLists.txt  exe_0.ans  exe_0.c  exe_1.ans  exe_1.c  lib_1.c  lib_2.c  lib_3.c
tests/generated_15/: CMakeLists.txt  exe_0.c  lib_0.c  lib_1.c
tests/generated_16/: CMakeLists.txt  exe_0.c  exe_1.ans  exe_1.c  lib_0.c
tests/generated_17/: CMakeLists.txt  exe_0.ans  exe_0.c  exe_1.ans  exe_1.c  lib_0.c  lib_1.c
tests/generated_18/: CMakeLists.txt  exe_0.ans  exe_0.c  lib_0.c  lib_1.c
tests/generated_19/: CMakeLists.txt  exe_0.c  exe_1.c  lib_1.c
tests/generated_2/: exe_0.c  (+3 more)
tests/generated_34/: CMakeLists.txt  exe_0.ans  exe_0.c  exe_1.ans  exe_1.c  lib_0.c  lib_1.c  lib_2.c
(+196 files in other folders)
