add_library(lib_0 SHARED lib_0.c)
add_library(lib_1 SHARED lib_1.c)
target_link_libraries(lib_1 lib_0)
target_link_libraries(lib_1 lib_0)
add_library(lib_2 SHARED lib_2.c)
add_executable(exe_0 exe_0.c)
target_link_libraries(exe_0 lib_1)
target_link_libraries(exe_0 lib_0)
target_link_libraries(exe_0 lib_1)
add_executable(exe_1 exe_1.c)
target_link_libraries(exe_1 lib_1)
target_link_libraries(exe_1 lib_0)
target_link_libraries(exe_1 lib_2)
